Update endpoints Auth and User
