# models/user-model.js
@@ -30,15 +30,11 @@ const userchema = new Schema(
       minLength: 6,
       required: true,
     },
-    // avatarURL: {
-    //   type: String,
-    //   required: true,
-    // },
-    // subscription: {
-    //   type: String,
-    //   enum: ['starter', 'pro', 'business'],
-    //   default: 'starter',
-    // },
+    favorites: [
+      {
+        type: String,
+      },
+    ],
     token: {
       type: String,
       default: '',
